kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omni-platform
  labels:
    name: omni-platform
